--- a/style.css
+++ b/style.css
@@ -51,3 +51,53 @@ body {
   column-gap: 20px;
   row-gap: 10px;
 }
+
+.btn {
+  display: flex;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  border-radius: 50px;
+}
+
+.btn:hover {
+  opacity: 0.5;
+  cursor: pointer;
+}
+.orange {
+  background-color: orange;
+  color: white;
+}
+
+.grey {
+  background-color: #a5a5a5;
+}
+
+.dark {
+  background-color: #333333;
+}
+
+.zero {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.zero div {
+  padding-left: 2rem;
+}
+
+.number0 {
+  /* border: 2px red solid; */
+  width: 100%;
+  height: 100%;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+
+.upp-text {
+  opacity: 0.5;
+}
